--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,5 +5,18 @@
 // Variables
 @import "variables";
 
-// Bootstrap
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+.categories {
+  display: flex;
+  width: 100%;
+}
+
+.category {
+  list-style: none;
+  border: 1px solid black;
+  padding: 20px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
