--- a/public/css/app.css
+++ b/public/css/app.css
@@ -75,6 +75,10 @@ body {
           justify-content: space-between;
 }
 
+.footer {
+  text-align: center;
+}
+
 .checkbox input,
 .radio input {
   margin: 8px;
