--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -52,6 +52,10 @@ body {
   justify-content: space-between;
 }
 
+.footer {
+  text-align: center;
+}
+
 .checkbox input, .radio input {
   margin: 8px;
 }
