--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,6 @@ body {
 }
 
 nav {
-  background: grey;
   padding: 15px;
 }
 
@@ -18,6 +17,10 @@ nav ul {
 nav a {
   display: block;
   width: 90px;
+}
+
+nav ul li a {
+  text-decoration: none;
 }
 
 .nav-left {
