--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -21,7 +21,9 @@ nav a {
 nav ul li a {
   text-decoration: none;
 }
-
+.bold {
+  font-weight: bold;
+}
 .nav-left {
   float: left;
 }
@@ -66,6 +68,7 @@ nav ul li a {
   text-align: center;
   display: flex;
   flex-direction: column;
+  margin: 5px;
 }
 
 .article_link {
@@ -90,4 +93,8 @@ nav ul li a {
 
 .checkbox input, .radio input {
   margin: 8px;
+}
+
+.values {
+  padding-bottom: 20px;
 }
