--- a/public/css/app.css
+++ b/public/css/app.css
@@ -126,3 +126,26 @@ nav ul li a {
   padding-bottom: 20px;
 }
 
+#footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.join_slack {
+  max-width: 300px;
+  margin: 20px;
+  text-align: center;
+  /* will center text in <p>, which is not a flex item */
+}
+
