--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -52,6 +52,10 @@ nav ul li a {
   flex-wrap: wrap;
 }
 
+.hero-list li {
+  text-align: left;
+  font-size: 24px;
+}
 
 .flexible_row {
   display: flex;
@@ -109,5 +113,12 @@ nav ul li a {
 .join_slack {
     max-width: 300px;
     margin: 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: lightblue;
     text-align: center;     /* will center text in <p>, which is not a flex item */
+}
+
+.join_slack a {
+  text-decoration: none;
 }
