--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,9 +1,10 @@
-body {
-  font-family: Camphor,Open Sans,Segoe UI,sans-serif;
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans);body {
+  font-family: 'Noto Sans', sans-serif;
 }
 
 nav {
   padding: 15px;
+  border-bottom: 1px solid lightgray;
 }
 
 nav ul {
@@ -16,11 +17,18 @@ nav ul {
 
 nav a {
   display: block;
-  width: 90px;
 }
 
 nav ul li a {
   text-decoration: none;
+  color: darkgreen;
+}
+
+label {
+  display: block;
+  border-radius: 4px;
+  margin-bottom: 7px;
+  padding: 0.3em;
 }
 
 .bold {
@@ -32,11 +40,16 @@ nav ul li a {
 }
 
 .nav-left ul li {
-  float: left;
+  text-align: left;
+}
+
+.nav-right {
+  text-align: right;
 }
 
 .nav-right ul li {
-  float: right;
+  display: inline-block;
+  padding-left: 5px;
 }
 
 .container {
@@ -61,9 +74,64 @@ nav ul li a {
       flex-wrap: wrap;
 }
 
+.hero-list-wrapper {
+  border: 3px solid #e2e2e2;
+  padding: 10px;
+  border-radius: 4px;
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.hero-list-wrapper h3 {
+  margin: 0;
+}
+
+.hero-list {
+  list-style: none;
+  padding: 20px;
+  margin: 0;
+}
+
 .hero-list li {
   text-align: left;
+  font-size: 18px;
+  line-height: 1.75;
+}
+
+.section-title {
+  margin-top: 40px;
+  margin-left: 20px;
+}
+
+.btn-wrapper {
+  text-align: center;
+}
+
+.btn {
+  padding: 20px 20px;
+  text-transform: uppercase;
+  background-color: #10CF7D;
+  margin: 0 auto;
+  display: inline-block;
+  text-align: center;
+  color: #FFF;
+  text-decoration: none;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 20px;
+  -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
+}
+
+.call-out {
+  text-transform: uppercase;
   font-size: 24px;
+}
+
+.call-out-small {
+  text-transform: uppercase;
+  font-size: 18px;
+  margin-bottom: 5px;
 }
 
 .flexible_row {
@@ -84,7 +152,6 @@ nav ul li a {
       -ms-flex: 1;
           flex: 1;
   list-style: none;
-  border: 1px solid black;
   padding: 30px;
   text-align: center;
   display: -webkit-box;
@@ -95,10 +162,47 @@ nav ul li a {
       -ms-flex-direction: column;
           flex-direction: column;
   margin: 5px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
+  border: 1px solid #e0e0e0;
+}
+
+.row_item a {
+  text-decoration: none;
+  color: green;
+  font-weight: 900;
+  font-size: 18px;
+}
+
+.recipe_detail {
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.instructions {
+  text-align: left;
+}
+
+.button_link {
+  padding: 40px;
+  text-transform: uppercase;
 }
 
 .article_link {
-  padding: 40px;
+  padding: 20px;
+}
+
+.article_link a {
+  color: #217954;
+  font-size: 16px;
 }
 
 .row_item_title {
@@ -116,6 +220,18 @@ nav ul li a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.recipe_extras p {
+  border-right: 1px solid black;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 0px 15px;
+}
+
+.recipe_extras p:nth-child(3) {
+  border: 0;
 }
 
 .footer {
@@ -150,14 +266,16 @@ nav ul li a {
 .join_slack {
   max-width: 300px;
   margin: 20px;
-  border: 1px solid black;
-  border-radius: 5px;
-  background-color: lightblue;
+  background-color: #10CF7D;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
   text-align: center;
   /* will center text in <p>, which is not a flex item */
 }
 
 .join_slack a {
   text-decoration: none;
+  color: white;
 }
 
