--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans');
+
 body {
-  font-family: Camphor,Open Sans,Segoe UI,sans-serif;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 nav {
   padding: 15px;
+  border-bottom: 1px solid lightgray;
 }
 nav ul {
   list-style-type: none;
@@ -15,12 +18,20 @@ nav ul {
 
 nav a {
   display: block;
-  width: 90px;
 }
 
 nav ul li a {
   text-decoration: none;
+  color: darkgreen;
 }
+
+label {
+  display: block;
+  border-radius: 4px;
+  margin-bottom: 7px;
+  padding:0.3em;
+}
+
 .bold {
   font-weight: bold;
 }
@@ -29,11 +40,16 @@ nav ul li a {
 }
 
 .nav-left ul li {
-  float: left;
+  text-align: left;
 }
 
-.nav-right ul li {
-  float: right;
+.nav-right {
+  text-align: right;
+}
+
+.nav-right ul li{
+  display: inline-block;
+  padding-left: 5px;
 }
 
 .container {
@@ -52,9 +68,62 @@ nav ul li a {
   flex-wrap: wrap;
 }
 
+.hero-list-wrapper {
+  border: 3px solid #e2e2e2;
+  padding: 10px;
+  border-radius: 4px;
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.hero-list-wrapper h3 {
+  margin: 0;
+}
+
+.hero-list {
+  list-style: none;
+  padding: 20px;
+  margin: 0;
+}
+
 .hero-list li {
   text-align: left;
+  font-size: 18px;
+  line-height: 1.75;
+}
+
+.section-title {
+  margin-top: 40px;
+  margin-left: 20px;
+}
+
+.btn-wrapper {
+  text-align: center;
+}
+.btn {
+  padding: 20px 20px;
+  text-transform: uppercase;
+  background-color: #10CF7D;
+  margin: 0 auto;
+  display: inline-block;
+  text-align: center;
+  color: #FFF;
+  text-decoration: none;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 20px;
+  box-shadow: 0 2px 20px rgba(0,0,0,.15);
+}
+
+.call-out {
+  text-transform: uppercase;
   font-size: 24px;
+}
+
+.call-out-small {
+  text-transform: uppercase;
+  font-size: 18px;
+  margin-bottom: 5px;
 }
 
 .flexible_row {
@@ -67,16 +136,46 @@ nav ul li a {
 .row_item {
   flex: 1;
   list-style: none;
-  border: 1px solid black;
   padding: 30px;
   text-align: center;
   display: flex;
   flex-direction: column;
   margin: 5px;
+  border-radius: 4px;
+  box-shadow: 0 2px 20px rgba(0,0,0,.15);
+  border: 1px solid #e0e0e0;
+}
+
+.row_item a {
+  text-decoration: none;
+  color: green;
+  font-weight: 900;
+  font-size: 18px;
+}
+
+.recipe_detail {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.instructions {
+  text-align: left;
+}
+
+.button_link {
+  padding: 40px;
+  text-transform: uppercase;
 }
 
 .article_link {
-  padding: 40px;
+  padding: 20px;
+}
+
+.article_link a {
+  color: #217954;
+  font-size: 16px;
 }
 
 .row_item_title { text-align: center; }
@@ -89,6 +188,16 @@ nav ul li a {
 .recipe_extras {
   display: flex;
   justify-content: space-between;
+}
+
+.recipe_extras p {
+  border-right: 1px solid black;
+  flex: 1;
+  padding: 0px 15px;
+}
+
+.recipe_extras p:nth-child(3) {
+  border: 0;
 }
 
 .footer {
@@ -113,12 +222,13 @@ nav ul li a {
 .join_slack {
     max-width: 300px;
     margin: 20px;
-    border: 1px solid black;
-    border-radius: 5px;
-    background-color: lightblue;
+    background-color: #10CF7D;
+    border-radius: 4px;
+    box-shadow: 0 2px 20px rgba(0,0,0,.15);
     text-align: center;     /* will center text in <p>, which is not a flex item */
 }
 
 .join_slack a {
   text-decoration: none;
+  color: white;
 }
