--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans);body {
   font-family: 'Noto Sans', sans-serif;
+  margin: 0;
 }
 
 nav {
@@ -277,5 +278,72 @@ label {
 .join_slack a {
   text-decoration: none;
   color: white;
+}
+
+.article_wrapper {
+  text-align: center;
+}
+
+.article_container {
+  max-width: 730px;
+  display: inline-block;
+  text-align: left;
+}
+
+.article_container h3 {
+  text-align: center;
+  color: grey;
+}
+
+.article_container h1 {
+  text-align: center;
+}
+
+.article_header_image {
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.image_large {
+  max-width: 730px;
+  margin: 20px;
+  max-height: 650px;
+}
+
+.image_land {
+  max-width: 730px;
+  margin: 20px;
+}
+
+.forest_counter {
+  border: 3px solid #e2e2e2;
+  font-size: 1.5em;
+  padding: 10px;
+}
+
+#acres {
+  color: red;
+}
+
+#waste {
+  color: red;
+}
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
 }
 
