--- a/public/css/app.css
+++ b/public/css/app.css
@@ -62,6 +62,12 @@ label {
   text-align: center;
 }
 
+.title {
+  max-width: 700px;
+  text-align: center;
+  display: inline-block;
+}
+
 .hero_text {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -368,5 +374,9 @@ label {
 .footer_wrapper {
   margin-bottom: 50px;
   text-align: center;
+}
+
+.research {
+  margin-bottom: 20px;
 }
 
