--- a/public/css/app.css
+++ b/public/css/app.css
@@ -182,6 +182,22 @@ label {
   font-size: 18px;
 }
 
+.row_header {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 5px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 5px;
+}
+
 .recipe_detail {
   padding: 20px;
   display: -webkit-box;
@@ -327,6 +343,10 @@ label {
 }
 
 .subtitle {
+  margin-top: 50px;
+}
+
+.first_content {
   margin-top: 50px;
 }
 
