--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,7 @@ body {
 nav {
   padding: 15px;
   border-bottom: 1px solid lightgray;
+  height: 50px;
 }
 nav ul {
   list-style-type: none;
@@ -15,6 +16,7 @@ nav ul {
   padding: 0;
   overflow: hidden;
   text-decoration: none;
+  line-height: 50px;
 }
 
 nav a {
@@ -23,7 +25,8 @@ nav a {
 
 nav ul li a {
   text-decoration: none;
-  color: #429e62;
+  color: #26CE81;
+  font-weight: bold;
 }
 
 label {
@@ -31,6 +34,10 @@ label {
   border-radius: 4px;
   margin-bottom: 7px;
   padding:0.3em;
+}
+
+.image_icon {
+  max-height: 50px;
 }
 
 .bold {
