--- a/public/css/app.css
+++ b/public/css/app.css
@@ -309,6 +309,53 @@ label {
   color: white;
 }
 
+.call_to_action {
+  width: 100%;
+  background-color: #10CF7D;
+  height: 200px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+}
+
+.call_to_action p {
+  font-size: 22px;
+}
+
+.input_button {
+  margin: 20px;
+}
+
+input[type=text] {
+  width: 200px;
+  padding: 5px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 50px;
+}
+
+.call_to_action .button {
+  height: 50px;
+  background-color: white;
+  color: #10CF7D;
+  padding: 13px 40px;
+  margin: 15px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
 .article_wrapper {
   text-align: center;
 }
