--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -256,10 +256,49 @@ label {
   color: white;
 }
 
+// cta
+
+.call_to_action {
+  width: 100%;
+  background-color: #10CF7D;
+  height: 200px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.call_to_action p {
+  font-size: 22px;
+}
+
+.input_button {
+  margin: 20px;
+}
+
+input[type=text] {
+  width: 200px;
+  padding: 5px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  height: 50px;
+}
+
+.call_to_action .button {
+  height: 50px;
+  background-color: white;
+  color: #10CF7D;
+  padding: 13px 40px;
+  margin: 15px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
 // article page styling
-
-
-
 .article_wrapper {
   text-align: center;
 }
