--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -36,6 +36,18 @@ label {
   padding:0.3em;
 }
 
+h3 {
+  margin: 10px;
+}
+
+
+// mobile
+@media (max-width: 767px) {
+  .call_to_action {
+    height: 350px;
+  }
+}
+
 .image_icon {
   max-height: 50px;
 }
@@ -142,9 +154,9 @@ label {
 
 .flexible_row {
   display: flex;
+  position: relative;
   flex-flow: row;
-  flex-wrap: wrap;
-  padding: 0px;
+  padding: 0;
 }
 
 .row_item {
@@ -158,6 +170,15 @@ label {
   border-radius: 4px;
   box-shadow: 0 2px 20px rgba(0,0,0,.15);
   border: 1px solid #e0e0e0;
+}
+
+@media (max-width: 767px) {
+  .flexible_row {
+    flex-wrap: wrap;
+  }
+  .row_item{
+    flex-basis: 100%;
+  }
 }
 
 .row_item a {
@@ -209,12 +230,11 @@ label {
 }
 
 .recipe_extras {
-  display: flex;
-  justify-content: space-between;
+  //display: flex;
+  //justify-content: space-between;
 }
 
 .recipe_extras p {
-  border-right: 1px solid black;
   flex: 1;
   padding: 0px 15px;
 }
@@ -267,12 +287,6 @@ label {
   justify-content: center;
   align-items: center;
   color: white;
-}
-
-@media (max-width: 767px) {
-  .call_to_action {
-    height: 350px;
-  }
 }
 
 .call_to_action p {
