refactoring to partials

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -69,6 +69,15 @@ h3 {
   margin: 0 auto;
 }
 
+.sources_wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.sources {
+  text-align: left;
+}
+
 .hero {
   text-align: center;
 }
