--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -69,6 +69,15 @@ h3 {
   margin: 0 auto;
 }
 
+.sources_wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.sources {
+  text-align: left;
+}
+
 .hero {
   text-align: center;
 }
