--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -107,7 +107,7 @@ h3 {
 
 .row_item a {
   text-decoration: none;
-  color: darkgreen;
+  color: #26ce81;
   font-weight: 900;
   font-size: 18px;
 }
@@ -204,7 +204,7 @@ h3 {
 
 .call_to_action {
   width: 100%;
-  background-color: darkgreen;
+  background-color: #26ce81;
   height: 200px;
   text-align: center;
   display: flex;
@@ -257,7 +257,7 @@ input[type=text] {
 .call_to_action .button {
   height: 50px;
   background-color: white;
-  color: darkgreen;
+  color: #26ce81;
   padding: 13px 40px;
   margin: 15px;
   border-radius: 4px;
