--- a/public/css/app.css
+++ b/public/css/app.css
@@ -49,7 +49,7 @@ h3 {
 .btn {
   padding: 10px 20px;
   text-transform: uppercase;
-  background-color: #26ce81;
+  background-color: green;
   margin: 0 auto;
   display: inline-block;
   text-align: center;
@@ -222,7 +222,7 @@ h3 {
 .join_slack {
   max-width: 300px;
   margin: 20px;
-  background-color: #26ce81;
+  background-color: #10CF7D;
   border-radius: 4px;
   -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
           box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
@@ -286,7 +286,7 @@ h3 {
   margin: 20px;
 }
 
-input[type=text] {
+.email-submit {
   width: 200px;
   padding: 5px 20px;
   margin: 8px 0;
@@ -360,7 +360,7 @@ input[type=text] {
 .forest_counter {
   font-size: 1.5em;
   padding: 10px;
-  background-color: #26ce81;
+  background-color: #10CF7D;
   color: #ffffff;
   -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
           box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
@@ -413,33 +413,3 @@ input[type=text] {
   text-align: center;
 }
 
-/* table!! */
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 75%;
-  margin: 0 auto;
-  margin-top: 50px;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  /*background-color: #dddddd;*/
-}
-
-.green {
-  background-color: #26ce81;
-}
-
-.red {
-  background-color: red;
-}
-
-.header-dashboard {
-  text-align: center;
-}
