--- a/public/css/app.css
+++ b/public/css/app.css
@@ -49,7 +49,7 @@ h3 {
 .btn {
   padding: 10px 20px;
   text-transform: uppercase;
-  background-color: green;
+  background-color: #26ce81;
   margin: 0 auto;
   display: inline-block;
   text-align: center;
@@ -411,5 +411,26 @@ h3 {
 
 .other-recipes {
   text-align: center;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+.green {
+  background-color: #26ce81;
+}
+
+.red {
+  background-color: red;
 }
 
