--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,6 +3,11 @@
   margin: 0;
 }
 
+svg:not(:root).svg-inline--fa {
+  cursor: pointer;
+  margin: 3px;
+}
+
 label {
   display: block;
   border-radius: 4px;
