--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -392,7 +392,43 @@ td, th {
   background-color: red;
 }
 
-//tr:nth-child(even) {
-//  background-color: #dddddd;
-//}
+// login/register
+.container-login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
+.form {
+  &__field {
+    width: 360px;
+    background: #fff;
+    color: #a3a3a3;
+    font: inherit;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0 , .1);
+    border: 0;
+    outline: 0;
+    padding: 22px 18px;
+    margin-bottom: 10px;
+  }
+}
+input .user-input #email {
+  font-size: 20px;
+}
+
+.login-button {
+  height: 50px;
+  background-color: white;
+  color: #26ce81;
+  padding: 13px 40px;
+  margin: 15px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.login-links {
+  display: flex;
+  justify-content: space-between;
+}
