--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,7 +5,8 @@
 
 svg:not(:root).svg-inline--fa {
   cursor: pointer;
-  margin: 3px;
+  margin-left: 3px;
+  margin-right: 3px;
 }
 
 label {
@@ -428,15 +429,18 @@ td,
 th {
   border: 1px solid #dddddd;
   text-align: left;
-  padding: 8px;
+  padding: 6px;
+  min-width: 76px;
 }
 
 .green {
   background-color: #26ce81;
+  text-align: center;
 }
 
 .red {
   background-color: red;
+  text-align: center;
 }
 
 .container-login {
@@ -489,5 +493,14 @@ input .user-input #email {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.table-data {
+  text-align: center;
+  border: 1px solid black;
+  background-color: transparent;
+  font-size: 14px;
+  border-radius: 7px;
+  color: black;
 }
 
