--- a/public/css/app.css
+++ b/public/css/app.css
@@ -422,7 +422,9 @@ h3 {
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 100%;
+  width: 95%;
+  margin: 0 auto;
+  margin-top: 20px;
 }
 
 td,
