--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -376,7 +376,9 @@ h3 {
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 100%;
+  width: 95%;
+  margin: 0 auto;
+  margin-top: 20px;
 }
 
 td, th {
