new ajax call for dashboard

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -484,7 +484,7 @@ input .user-input #email {
 
 .food-card a {
   text-decoration: none;
-  color: #26ce81;
+  color: black;
   font-weight: 900;
   font-size: 18px;
 }
