--- a/public/css/app.css
+++ b/public/css/app.css
@@ -419,29 +419,6 @@ h3 {
   text-align: center;
 }
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 95%;
-  margin: 0 auto;
-  margin-top: 20px;
-}
-
-td,
-th {
-  border: 1px solid #dddddd;
-  padding: 6px;
-  min-width: 76px;
-}
-
-th {
-  text-align: left;
-}
-
-td {
-  text-align: center;
-}
-
 .green {
   background-color: #26ce81;
   text-align: center;
@@ -546,5 +523,9 @@ input .user-input #email {
   color: black;
   font-weight: 900;
   font-size: 18px;
+}
+
+#datepicker {
+  max-width: 200px;
 }
 
