--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -374,26 +374,26 @@ h3 {
 
 //
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 95%;
-  margin: 0 auto;
-  margin-top: 20px;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  padding: 6px;
-  min-width: 76px;
-}
-th {
-  text-align: left;
-}
-
-td {
-  text-align: center;
-}
+//table {
+//  font-family: arial, sans-serif;
+//  border-collapse: collapse;
+//  width: 95%;
+//  margin: 0 auto;
+//  margin-top: 20px;
+//}
+//
+//td, th {
+//  border: 1px solid #dddddd;
+//  padding: 6px;
+//  min-width: 76px;
+//}
+//th {
+//  text-align: left;
+//}
+//
+//td {
+//  text-align: center;
+//}
 
 
 .green {
@@ -487,4 +487,8 @@ input .user-input #email {
   color: black;
   font-weight: 900;
   font-size: 18px;
+}
+
+#datepicker {
+  max-width: 200px;
 }
