--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29,6 +29,19 @@ h3 {
   margin-bottom: 10px;
 }
 
+.header-inline {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+#datepicker {
+  height: 30px;
+  margin-top: 25px;
+}
+
 .bold {
   font-weight: bold;
 }
@@ -523,5 +536,16 @@ input .user-input #email {
   color: black;
   font-weight: 900;
   font-size: 18px;
+}
+
+#go-button {
+  background-color: white;
+  color: #26ce81;
+  height: 30px;
+  width: 50px;
+  margin: 15px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
 }
 
