--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -31,6 +31,16 @@ h3 {
   margin-bottom: 10px;
 }
 
+.header-inline {
+  display: flex;
+  justify-content: space-around;
+}
+
+#datepicker {
+  height: 30px;
+  margin-top: 25px;
+}
+
 
 .bold {
   font-weight: bold;
@@ -489,5 +499,13 @@ input .user-input #email {
   font-size: 18px;
 }
 
-#datepicker {
+#go-button {
+  background-color: white;
+  color: #26ce81;
+  height: 30px;
+width: 50px;
+  margin: 15px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
 }
