--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -509,3 +509,16 @@ width: 50px;
   cursor: pointer;
   font-size: 16px;
 }
+
+#myProgress {
+  width: 100%;
+  background-color: #ddd;
+}
+
+#myBar {
+  height: 30px;
+  background-color: #26ce81;
+  text-align: center;
+  line-height: 30px;
+  color: white;
+}
