--- a/public/css/app.css
+++ b/public/css/app.css
@@ -574,3 +574,14 @@ input .user-input #email {
   color: white;
 }
 
+.upvotes {
+  text-align: center;
+  cursor: pointer;
+  margin: 30px;
+}
+
+#number_of_upvotes {
+  margin-left: 25px;
+  font-size: 40px;
+}
+
