--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -53,7 +53,7 @@ h3 {
   margin-top: 25px;
   font-size: 18px;
   border: grey 1px solid;
-  border-radius: 4px; 
+  border-radius: 4px;
 }
 
 
@@ -475,9 +475,13 @@ input .user-input #email {
   text-align: center;
   border: 1px solid black;
   background-color: transparent;
-  font-size: 14px;
+  font-size: 30px;
   border-radius: 7px;
   color: black;
+}
+
+.table-recommended {
+    font-size: 30px;
 }
 
 .card-wrapper {
