similar recipes on weekly page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -49,6 +49,24 @@ h3 {
   }
 }
 
+@media (max-width: 767px) {
+  .header-inline-recipe {
+    display: block;
+    text-align: center;
+  }
+}
+
+@media (min-width: 768px) {
+  .header-inline-recipe {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 #datepicker {
   height: 30px;
   margin-top: 25px;
@@ -633,5 +651,10 @@ input .user-input #email {
 .active-nav-item {
   color: black !important;
   border-bottom: black 3px solid !important;
+}
+
+.tags {
+  cursor: pointer;
+  margin: 40px;
 }
 
