--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20,6 +20,10 @@ h3 {
   margin: 10px;
 }
 
+.fixed-nav {
+  position: fixed;
+}
+
 .image_icon {
   max-height: 50px;
 }
@@ -586,9 +590,9 @@ input .user-input #email {
 }
 
 .food-card a {
-  color: black;
   font-weight: 900;
   font-size: 18px;
+  padding: 10px;
 }
 
 #go-button {
