--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -611,3 +611,9 @@ input .user-input #email {
 .tags .btn {
   margin-bottom: 10px;
 }
+
+#week-score {
+  text-align: center;
+  font-size: 38px;
+  color: #26ce81;
+}
