--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20,10 +20,6 @@ h3 {
   margin: 10px;
 }
 
-.fixed-nav {
-  position: fixed;
-}
-
 .image_icon {
   max-height: 50px;
 }
@@ -604,7 +600,18 @@ input .user-input #email {
 #myProgress {
   width: 100%;
   background-color: #ddd;
-  margin: 40px 0px 40px;
+  max-width: 1180px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.fixed-nav #myProgress {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  margin: 0 auto;
+  max-width: none;
 }
 
 #myBar {
