--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -21,10 +21,6 @@ h3 {
   margin: 10px;
 }
 
-.fixed-nav {
-  position: fixed;
-}
-
 // images
 .image_icon {
   max-height: 50px;
@@ -558,7 +554,18 @@ input .user-input #email {
 #myProgress {
   width: 100%;
   background-color: #ddd;
-  margin: 40px 0px 40px;
+  max-width: 1180px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.fixed-nav #myProgress{
+  position: fixed;
+  top:0;
+  width:100%;
+  z-index: 1;
+  margin: 0 auto;
+  max-width: none;
 }
 
 
