--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -475,8 +475,7 @@ input .user-input #email {
   background-color: #26ce81;
   padding: 0px 20px;
   @media (max-width: 767px) {
-    padding: 0px 15px;
-    width: 35px;
+    padding: 0 10px;
   }
 }
 .login-nav a {
